[gd_scene load_steps=11 format=2]

[ext_resource path="res://win.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/wallpaperfreeway.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sons/ponto.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sons/ganhou.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sons/tema.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.968627, 0.941176, 0.0431373, 1 )
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="win" parent="." instance=ExtResource( 1 )]
position = Vector2( 638.66, 64 )
gravity_scale = 0.0

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 696 )

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 944, 696 )

[node name="fastCarTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="slowCarTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="scoreboard1" type="Label" parent="."]
margin_left = 300.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.94902, 0.980392, 0.027451, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoreboard2" type="Label" parent="."]
margin_left = 920.0
margin_top = 10.0
margin_right = 944.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.94902, 0.980392, 0.027451, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="result" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.94902, 0.980392, 0.027451, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="point" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="youWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -18.0

[node name="restartButton" type="Button" parent="."]
margin_left = 496.0
margin_top = 300.0
margin_right = 796.0
margin_bottom = 380.0
custom_fonts/font = SubResource( 1 )
text = "Reiniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toScore" from="Player" to="." method="_on_Player_toScore"]
[connection signal="toScore2" from="Player2" to="." method="_on_Player2_toScore2"]
[connection signal="timeout" from="fastCarTimer" to="." method="_on_fastCarTimer_timeout"]
[connection signal="timeout" from="slowCarTimer" to="." method="_on_slowCarTimer_timeout"]
[connection signal="pressed" from="restartButton" to="." method="_on_restartButton_pressed"]
